--- a/src/VideoCard.css
+++ b/src/VideoCard.css
@@ -1,36 +1,47 @@
-.videoCard{
-    color: white;
-    width: 500px;
-    height: 400px;
-    padding: 20px;
-    transition: transform 100ms;
+.videoCard {
+  color: white;
+  width: 500px;
+  height: 400px;
+  padding: 20px;
+  transition: transform 100ms;
 }
 
-.videoCard:hover{
-    transform: scale(1.09);
+.videoCard:hover {
+  transform: scale(1.09);
 }
 
-.videoCard > img{
-    height: 300px;
-    width: 500px;
-    object-fit: contain;
+.videoCard > img {
+  height: 300px;
+  width: 500px;
+  object-fit: contain;
 }
 
-.videoCard > h2{
-    padding-top: 10px;
+.videoCard > h2 {
+  padding-top: 10px;
 }
 
-.videoCard__stats{
-    display: none;
+.videoCard__stats {
+  display: none;
 }
 
-.videoCard:hover > .videoCard__stats{
-    display: flex;
-    align-items: center;
-    justify-content: space-between
+.videoCard:hover > .videoCard__stats {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.videoCard:hover > .videoCard__stats > .videoCard__stats--likes{
-    display: flex;
-    align-items: center;
+.videoCard:hover > .videoCard__stats > .videoCard__stats--likes {
+  display: flex;
+  align-items: center;
+}
+
+@media (max-width: 688px) {
+  .videoCard {
+    width: 100%;
+  }
+
+  .videoCard > img {
+    width: 100%;
+    height: unset;
+  }
 }
